--- a/transformer-aihub.ipynb
+++ b/transformer-aihub.ipynb
@@ -34,13 +34,13 @@
     "    'lr': 0.003,\n",
     "    'dropout': 0.5,\n",
     "    'min_frequency': 3,\n",
-    "    'max_len': 20,\n",
+    "    'max_len': 512,\n",
     "    \n",
     "    'vocab_size': 20000,\n",
-    "    'embed_dim': 100,\n",
-    "    'hidden_dim': 256,\n",
-    "    'num_filters': 100,\n",
-    "    'output_dim': 1,\n",
+    "    'num_layers': 6,\n",
+    "    'num_heads': 6,\n",
+    "    'hidden_dim': 512,\n",
+    "    'ffn_dim': 2048,\n",
     "}"
    ]
   },
@@ -83,17 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pad_idx = kor_tokenizer.token_to_id('[PAD]')\n",
-    "sos_idx = kor_tokenizer.token_to_id('[SOS]')\n",
-    "eos_idx = kor_tokenizer.token_to_id('[EOS]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Initialize a tokenizer\n",
     "eng_tokenizer = BPETokenizer()\n",
     "\n",
@@ -105,6 +94,17 @@
     "    special_tokens=['[PAD]', '[SOS]', '[EOS]', '[UNK]'],\n",
     "    suffix=''\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pad_idx = kor_tokenizer.token_to_id('[PAD]')\n",
+    "sos_idx = kor_tokenizer.token_to_id('[SOS]')\n",
+    "eos_idx = kor_tokenizer.token_to_id('[EOS]')"
    ]
   },
   {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,9 +263,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](img/positionwise.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "IndentationError",
@@ -294,116 +303,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](img/pos.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PositionalEmbedding(nn.Module):\n",
+    "class PositionalEncoding(nn.Module):\n",
     "    def __init__(self, params):\n",
-    "        super(PositionalEmbedding, self).__init__()\n",
-    "        self.device = params.device\n",
-    "        # PE(pos, 2i)     = sin(pos/10000 ** (2*i / hidden_dim))\n",
-    "        # PE(pos, 2i + 1) = cos(pos/10000 ** (2*i / hidden_dim))\n",
-    "        sinusoid = np.array([pos / np.power(10000, 2 * i / params.hidden_dim)\n",
-    "                            for pos in range(params.max_len) for i in range(params.hidden_dim)])\n",
-    "        # sinusoid = [max len * hidden dim]\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        sinusoid = np.array([pos / np.power(10000, 2 * i / params['hidden_dim'])\n",
+    "                            for pos in range(params['max_len']) for i in range(params['hidden_dim'])])\n",
+    "        # sinusoid = [문장 최대 길이 * 은닉 차원]\n",
     "\n",
-    "        sinusoid = sinusoid.reshape(params.max_len, -1)\n",
-    "        # sinusoid = [max len, hidden dim]\n",
+    "        sinusoid = sinusoid.reshape(params['max_len'], -1)\n",
+    "        # sinusoid = [문장 최대 길이, 은닉 차원]\n",
     "\n",
     "        sinusoid[:, 0::2] = np.sin(sinusoid[:, 0::2])\n",
     "        sinusoid[:, 1::2] = np.cos(sinusoid[:, 1::2])\n",
-    "        sinusoid = torch.FloatTensor(sinusoid).to(self.device)\n",
+    "        sinusoid = torch.FloatTensor(sinusoid).to(device)\n",
     "\n",
     "        self.embedding = nn.Embedding.from_pretrained(sinusoid, freeze=True)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        \" x = [batch size, sentence length] \"\n",
+    "        \" x = [배치 사이즈, 문장 길이] \"\n",
     "        \n",
-    "        x_pos = torch.arange(x.size(-1), dtype=torch.long).to(self.device)\n",
-    "        embed = self.embedding(x_pos)\n",
-    "        # embed = [batch size, sentence length, embed dim]\n",
+    "        pos = torch.arange(x.size(-1), dtype=torch.long).to(device)\n",
+    "        # pos = [배치 사이즈, 문장 길이]\n",
+    "\n",
+    "        embed = self.embedding(pos)\n",
+    "        # embed = [배치 사이즈, 문장 길이, 은닉 차원]\n",
     "        return embed"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'params'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-3d5c94b67d5a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPositionalEmbedding\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'params'"
-     ]
-    }
-   ],
    "source": [
-    "d = PositionalEmbedding()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DecoderLayer(nn.Module):\n",
-    "    '''디코더 레이어'''\n",
-    "    def __init__(self, params):\n",
-    "        super(DecoderLayer, self).__init__()\n",
-    "        self.self_attn = MultiHeadAttention(params)\n",
-    "        self.layer_norm1 = nn.LayerNorm(params['hidden_dim'])\n",
-    "        self.feed_forward = PositionwiseFeedForward(params)\n",
-    "        self.layer_norm2 = nn.LayerNorm(params['hidden_dim'])\n",
-    "        self.dropout = nn.Dropout(params['dropout'])\n",
-    "        \n",
-    "    def forward(self, x, tgt_mask, enc_output, src_mask):\n",
-    "        \" x = [배치 사이즈, 문장 길이, 은닉 차원] \"\n",
-    "        \n",
-    "        residual = x\n",
-    "        x = self.self_attn(x, x, x, tgt_mask)\n",
-    "        x = self.dropout(x)\n",
-    "        x = residual + x\n",
-    "        x = self.layer_norm1(x)\n",
-    "        \n",
-    "        x = self.enc_dec_attn(x, enc_output, enc_output, src_mask)\n",
-    "        \n",
-    "        residual = x\n",
-    "        x = self.feed_forward(x)\n",
-    "        x = self.dropout(x)\n",
-    "        x = resiudal + x\n",
-    "        x = self.layer_norm2(x)\n",
-    "        \n",
-    "        return x\n",
-    "\n",
-    "\n",
-    "class Decoder(nn.Module):\n",
-    "    '''트랜스포머 디코더'''\n",
-    "    def __init__(self, params):\n",
-    "        super(Decoder, self).__init__()\n",
-    "        self.tok_embedding = nn.Linear(params['vocab_size'], params['hidden_dim'], padding_idx=pad_idx)\n",
-    "        self.pos_embedding = PositionalEmbedding()\n",
-    "        self.layers = nn.ModuleList([DecoderLayer(params) for _ in range(params['num_layers'])])\n",
-    "        \n",
-    "    def forward(self, x, enc_output):\n",
-    "        \" x = [배치 사이즈, 문장 길이] \"\n",
-    "        \n",
-    "        x = self.tok_embedding(x) + self.pos_embedding(x)\n",
-    "        src_mask, tgt_mask = create_target_mask(enc_output, x)\n",
-    "        \n",
-    "        for layer in self.layers:\n",
-    "            x, attn_map = layer(x, tgt_mask, enc_output, src_mask)\n",
-    "            \n",
-    "        x = torch.matmul(target, self.tok_embedding.weight.transpose(0, 1))\n",
-    "        \n",
-    "        return x, attn_map"
+    "![](img/encoder.png)"
    ]
   },
   {
@@ -445,7 +388,7 @@
     "    def __init__(self, params):\n",
     "        super(Encoder, self).__init__()\n",
     "        self.tok_embedding = nn.Linear(params['vocab_size'], params['hidden_dim'], padding_idx=pad_idx)\n",
-    "        self.pos_embedding = PositionalEmbedding()\n",
+    "        self.pos_embedding = PositionalEncoding()\n",
     "        self.layers = nn.ModuleList([EncoderLayer(params) for _ in range(params['num_layers'])])\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -458,6 +401,78 @@
     "            x = layer(x, src_mask)\n",
     "            \n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](img/decoder.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecoderLayer(nn.Module):\n",
+    "    '''디코더 레이어'''\n",
+    "    def __init__(self, params):\n",
+    "        super(DecoderLayer, self).__init__()\n",
+    "        self.self_attn = MultiHeadAttention(params)\n",
+    "        self.layer_norm1 = nn.LayerNorm(params['hidden_dim'])\n",
+    "\n",
+    "        self.enc_dec_attn = MultiHeadAttention(params)\n",
+    "        self.layer_norm2 = nn.LayerNorm(params['hidden_dim'])\n",
+    "        self.feed_forward = PositionwiseFeedForward(params)\n",
+    "        self.layer_norm2 = nn.LayerNorm(params['hidden_dim'])\n",
+    "        self.dropout = nn.Dropout(params['dropout'])\n",
+    "        \n",
+    "    def forward(self, x, tgt_mask, enc_output, src_mask):\n",
+    "        \" x = [배치 사이즈, 문장 길이, 은닉 차원] \"\n",
+    "        \n",
+    "        residual = x\n",
+    "        x = self.self_attn(x, x, x, tgt_mask)\n",
+    "        x = self.dropout(x)\n",
+    "        x = residual + x\n",
+    "        x = self.layer_norm1(x)\n",
+    "        \n",
+    "        residual = x\n",
+    "        x = self.enc_dec_attn(x, enc_output, enc_output, src_mask)\n",
+    "        x = self.dropout(x)\n",
+    "        x = residual + x\n",
+    "        x = self.layer_norm2(x)\n",
+    "        \n",
+    "        residual = x\n",
+    "        x = self.feed_forward(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = resiudal + x\n",
+    "        x = self.layer_norm3(x)\n",
+    "        \n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "class Decoder(nn.Module):\n",
+    "    '''트랜스포머 디코더'''\n",
+    "    def __init__(self, params):\n",
+    "        super(Decoder, self).__init__()\n",
+    "        self.tok_embedding = nn.Linear(params['vocab_size'], params['hidden_dim'], padding_idx=pad_idx)\n",
+    "        self.pos_embedding = PositionalEncoding()\n",
+    "        self.layers = nn.ModuleList([DecoderLayer(params) for _ in range(params['num_layers'])])\n",
+    "        \n",
+    "    def forward(self, x, enc_output):\n",
+    "        \" x = [배치 사이즈, 문장 길이] \"\n",
+    "        \n",
+    "        x = self.tok_embedding(x) + self.pos_embedding(x)\n",
+    "        src_mask, tgt_mask = create_target_mask(enc_output, x)\n",
+    "        \n",
+    "        for layer in self.layers:\n",
+    "            x, attn_map = layer(x, tgt_mask, enc_output, src_mask)\n",
+    "            \n",
+    "        x = torch.matmul(target, self.tok_embedding.weight.transpose(0, 1))\n",
+    "        \n",
+    "        return x, attn_map"
    ]
   },
   {
@@ -483,20 +498,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](img/optim.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ScheduledOptim:\n",
-    "    def __init__(self, optimizer):\n",
+    "    def __init__(self, optimizer, warmup_steps):\n",
     "        self.init_lr = np.power(params['hidden_dim'], -0.5)\n",
     "        self.optimizer = optimizer\n",
-    "        self.current_steps = 0\n",
-    "        self.warm_steps = warm_steps\n",
+    "        self.step_num = 0\n",
+    "        self.warmup_steps = warmup_steps\n",
     "    \n",
     "    def step(self):\n",
-    "        self.current_steps += 1\n",
+    "        self.step_num += 1\n",
     "        lr = self.init_lr * self.get_scale()\n",
     "        \n",
     "        for p in self.optimizer.param_gropus:\n",
@@ -509,8 +531,8 @@
     "    \n",
     "    def get_scale(self):\n",
     "        return np.min([\n",
-    "            np.power(self.current_steps, -0.5),\n",
-    "            self.current_steps * np.power(self.warm_steps, -0.5)\n",
+    "            np.power(self.step_num, -0.5),\n",
+    "            self.step_num * np.power(self.warmup_steps, -1.5)\n",
     "        ])"
    ]
   },
@@ -523,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -533,13 +555,23 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-7ec275d0e900>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'num_epoch'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtrain_iter\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-26-58031fb6bd29>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTransformer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCrossEntropyLoss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'params' is not defined"
      ]
     }
    ],
    "source": [
+    "model = Transformer(params)\n",
+    "model.to(device)\n",
     "model.count_params()\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss(ignore_index=pad_idx)\n",
+    "criterion.to(device)\n",
+    "\n",
+    "optimizer = ScheduledOptim(\n",
+    "    optim.Adam(model.parameters(), betas=[0.9, 0.98], eps=1e-9),\n",
+    "    warmup_steps=4000\n",
+    ")\n",
     "\n",
     "for epoch in params['num_epoch']:\n",
     "    model.train()\n",
