--- a/transformer-aihub.ipynb
+++ b/transformer-aihub.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,21 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {\n",
     "    'batch_size': 64,\n",
     "    'num_epoch': 15,\n",
-    "    'lr': 0.003,\n",
-    "    'dropout': 0.5,\n",
+    "    'dropout': 0.1,\n",
     "    'min_frequency': 3,\n",
     "    'max_len': 512,\n",
     "    \n",
     "    'vocab_size': 20000,\n",
     "    'num_layers': 6,\n",
-    "    'num_heads': 6,\n",
+    "    'num_heads': 8,\n",
     "    'hidden_dim': 512,\n",
     "    'ffn_dim': 2048,\n",
     "}"
@@ -64,10 +70,10 @@
    "source": [
     "from tokenizers import BPETokenizer\n",
     "\n",
-    "# Initialize a tokenizer\n",
+    "# 한국어 토크나이저 초기화\n",
     "kor_tokenizer = BPETokenizer()\n",
     "\n",
-    "# Then train it!\n",
+    "# 한국어 토크나이저 훈련\n",
     "kor_tokenizer.train(\n",
     "    ['train_korean.txt'],\n",
     "    vocab_size=params['vocab_size'],\n",
@@ -83,10 +89,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize a tokenizer\n",
+    "# 영어 토크나이저 초기화\n",
     "eng_tokenizer = BPETokenizer()\n",
     "\n",
-    "# Then train it!\n",
+    "# 영어 토크나이저 훈련\n",
     "eng_tokenizer.train(\n",
     "    ['train_english.txt'],\n",
     "    vocab_size=params['vocab_size'],\n",
@@ -128,6 +134,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def postprocess(input_ids):\n",
+    "    input_ids = [sos_idx] + input_ids\n",
+    "    \n",
+    "    input_ids = input_ids[:params['max_len']]\n",
+    "\n",
+    "    if pad_idx in input_ids:\n",
+    "        pad_start = input_ids.index(pad_idx)\n",
+    "        input_ids[pad_start] = eos_idx\n",
+    "    else:\n",
+    "        input_ids[-1] = eos_idx\n",
+    "    \n",
+    "    return input_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kor_processed_data = [postprocess(data.ids) for data in kor_encoded_data]\n",
+    "eng_processed_data = [postprocess(data.ids) for data in eng_encoded_data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kor_processed_data = [torch.LongTensor(data).to(device) for data in kor_processed_data]\n",
+    "eng_processed_data = [torch.LongTensor(data).to(device) for data in eng_processed_data]\n",
+    "\n",
+    "src_iter = data.DataLoader(kor_processed_data, batch_size=params['batch_size'], shuffle=True)\n",
+    "tgt_iter = data.DataLoader(eng_processed_data, batch_size=params['batch_size'], shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'src_iter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-294786e2110f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtgt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc_iter\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtgt_iter\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Source: {kor_tokenizer.decoder(src)}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Target: {eng_tokenizer.decoder(tgt)}\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'src_iter' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for src, tgt in zip(src_iter[:3], tgt_iter[:3]):\n",
+    "    print(f'Source: {kor_tokenizer.decoder(src)}')\n",
+    "    print(f'Target: {eng_tokenizer.decoder(tgt)}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pad_idx = 0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,13 +239,14 @@
     "\n",
     "torch.manual_seed(32)\n",
     "torch.cuda.manual_seed(32)\n",
+    "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +321,7 @@
     "def create_tgt_mask(src, tgt):\n",
     "    \" src = [배치 사이즈, 소스 문장 길이] \"\n",
     "    \" tgt = [배치 사이즈, 타겟 문장 길이] \"\n",
+    "\n",
     "    batch_size, tgt_len = tgt.size()\n",
     "    \n",
     "    subsequent_mask = torch.triu(torch.ones(tgt_len, tgt_len), diagonal=1)\n",
@@ -271,20 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<tokenize>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    x = self.dropout(F.relu(self.fc1(x)))\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class PositionwiseFeedForward(nn.Module):\n",
     "    '''포지션 와이즈 피드 포워드 레이어'''\n",
@@ -311,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,20 +461,21 @@
     "    '''트랜스포머 인코더'''\n",
     "    def __init__(self, params):\n",
     "        super(Encoder, self).__init__()\n",
-    "        self.tok_embedding = nn.Linear(params['vocab_size'], params['hidden_dim'], padding_idx=pad_idx)\n",
-    "        self.pos_embedding = PositionalEncoding()\n",
+    "        self.tok_embedding = nn.Embedding(params['vocab_size'], params['hidden_dim'], padding_idx=pad_idx)\n",
+    "        self.pos_embedding = PositionalEncoding(params)\n",
     "        self.layers = nn.ModuleList([EncoderLayer(params) for _ in range(params['num_layers'])])\n",
     "        \n",
-    "    def forward(self, x):\n",
-    "        \" x = [배치 사이즈, 문장 길이] \"\n",
+    "    def forward(self, src):\n",
+    "        \" src = [배치 사이즈, 소스 문장 길이] \"\n",
     "        \n",
-    "        x = self.tok_embedding(x) + self.pos_embedding(x)\n",
-    "        src_mask = create_source_mask(x)\n",
+    "        src = self.tok_embedding(src) + self.pos_embedding(src)\n",
+    "        src_mask = create_source_mask(src)\n",
     "        \n",
     "        for layer in self.layers:\n",
-    "            x = layer(x, src_mask)\n",
+    "            src = layer(src, src_mask)\n",
     "            \n",
-    "        return x"
+    "        # src = [배치 사이즈, 소스 문장 길이, 은닉 차원]\n",
+    "        return src"
    ]
   },
   {
@@ -412,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,8 +500,10 @@
     "\n",
     "        self.enc_dec_attn = MultiHeadAttention(params)\n",
     "        self.layer_norm2 = nn.LayerNorm(params['hidden_dim'])\n",
+    "        \n",
     "        self.feed_forward = PositionwiseFeedForward(params)\n",
-    "        self.layer_norm2 = nn.LayerNorm(params['hidden_dim'])\n",
+    "        self.layer_norm3 = nn.LayerNorm(params['hidden_dim'])\n",
+    "        \n",
     "        self.dropout = nn.Dropout(params['dropout'])\n",
     "        \n",
     "    def forward(self, x, tgt_mask, enc_output, src_mask):\n",
@@ -457,27 +534,28 @@
     "    '''트랜스포머 디코더'''\n",
     "    def __init__(self, params):\n",
     "        super(Decoder, self).__init__()\n",
-    "        self.tok_embedding = nn.Linear(params['vocab_size'], params['hidden_dim'], padding_idx=pad_idx)\n",
-    "        self.pos_embedding = PositionalEncoding()\n",
+    "        self.tok_embedding = nn.Embedding(params['vocab_size'], params['hidden_dim'], padding_idx=pad_idx)\n",
+    "        self.pos_embedding = PositionalEncoding(params)\n",
     "        self.layers = nn.ModuleList([DecoderLayer(params) for _ in range(params['num_layers'])])\n",
     "        \n",
-    "    def forward(self, x, enc_output):\n",
-    "        \" x = [배치 사이즈, 문장 길이] \"\n",
+    "    def forward(self, tgt, enc_out):\n",
+    "        \" tgt = [배치 사이즈, 타겟 문장 길이] \"\n",
     "        \n",
-    "        x = self.tok_embedding(x) + self.pos_embedding(x)\n",
-    "        src_mask, tgt_mask = create_target_mask(enc_output, x)\n",
+    "        tgt = self.tok_embedding(tgt) + self.pos_embedding(tgt)\n",
+    "        src_mask, tgt_mask = create_target_mask(enc_out, tgt)\n",
     "        \n",
     "        for layer in self.layers:\n",
-    "            x, attn_map = layer(x, tgt_mask, enc_output, src_mask)\n",
+    "            tgt, attn_map = layer(tgt, tgt_mask, enc_out, src_mask)\n",
     "            \n",
-    "        x = torch.matmul(target, self.tok_embedding.weight.transpose(0, 1))\n",
-    "        \n",
-    "        return x, attn_map"
+    "        tgt = torch.matmul(tgt, self.tok_embedding.weight.transpose(0, 1))\n",
+    "        # tgt = [배치 사이즈, 타겟 문장 길이, 은닉 차원]\n",
+    "\n",
+    "        return tgt, attn_map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,10 +566,13 @@
     "        self.encoder = Encoder(params)\n",
     "        self.decoder = Decoder(params)\n",
     "    \n",
-    "    def forward(self, source, target):\n",
-    "        encoder_output = self.encoder(source)\n",
-    "        decoder_output, attn_map = self.decoder(target, encoder_output)\n",
-    "        return decoder_output, attn_map\n",
+    "    def forward(self, src, tgt):\n",
+    "        \" src = [배치 사이즈, 소스 문장 길이] \"\n",
+    "        \" tgt = [배치 사이즈, 타겟 문장 길이] \"\n",
+    "        \n",
+    "        enc_out = self.encoder(src)\n",
+    "        dec_out, attn = self.decoder(tgt, enc_out)\n",
+    "        return dec_out, attn\n",
     "    \n",
     "    def count_params(self):\n",
     "        return sum(p.numel() for p in self.parameters() if p.requires_grad)"
@@ -506,11 +587,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ScheduledOptim:\n",
+    "    '''스케줄 옵티마이저'''\n",
     "    def __init__(self, optimizer, warmup_steps):\n",
     "        self.init_lr = np.power(params['hidden_dim'], -0.5)\n",
     "        self.optimizer = optimizer\n",
@@ -545,6 +627,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64618496"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Transformer(params)\n",
+    "model.to(device)\n",
+    "model.count_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -575,17 +679,31 @@
     "\n",
     "for epoch in params['num_epoch']:\n",
     "    model.train()\n",
-    "    \n",
-    "    for batch in train_iter:\n",
-    "        pass"
+    "    epoch_loss = 0\n",
+    "\n",
+    "    for src, tgt in zip(src_iter, tgt_iter):\n",
+    "        \" src = [배치 사이즈, 소스 문장 길이] \"\n",
+    "        \" tgt = [배치 사이즈, 타겟 문장 길이] \"\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        logits, _ = model(src, tgt[:, :-1])\n",
+    "        # logits = [배치 사이즈, 타겟 문장 길이, 은닉 차원]\n",
+    "        \n",
+    "        logits = logits.contiguous().view(-1, logits.size(-1))\n",
+    "        # logits = [(배치 사이즈 * 타겟 문장 길이) - 1, 은닉 차원]\n",
+    "        golds = target[:, 1:].contiguous.view(-1)\n",
+    "        # golds = [(배치 사이즈 * 타겟 문장 길이) - 1]\n",
+    "\n",
+    "        loss = criterion(logits, golds)\n",
+    "        epoch_loss += loss.item()\n",
+    "        \n",
+    "        loss.backward()\n",
+    "#         torch.nn.utils.clip_grad_norm_(model.parameters(), self.params.clip)\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "    print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -601,7 +719,7 @@
    "outputs": [],
    "source": [
     "def predict():\n",
-    "    pass"
+    "    model.eval()"
    ]
   },
   {
