--- a/tokenizers-captum.ipynb
+++ b/tokenizers-captum.ipynb
@@ -374,7 +374,9 @@
     "\n",
     "- 이후 **최대 길이**를 넘는 문장들을 모두 **최대 길이**에 맞게 슬라이스 연산을 통해 잘라줍니다.\n",
     "- 문장이 짧아 패딩 토큰이 포함된 문장은 첫 번째 패딩 토큰을 **'EOS'** 토큰으로 변경해줍니다.\n",
-    "- 패딩 토큰이 포함되지 않은 문장은 시퀀스 말미에 **'EOS' 토큰**을 삽입해줍니다."
+    "- 패딩 토큰이 포함되지 않은 문장은 시퀀스 말미에 **'EOS' 토큰**을 삽입해줍니다.\n",
+    "\n",
+    "_cf) **[SOS] 토큰**과 **[EOS] 토큰**은 **자연어 생성** 모델에서 주로 사용되는 토큰으로 단순 분류 모델에서는 사용해주지 않아도 무방한 토큰입니다. 본 튜토리얼에서 굳이 후처리 과정에 본 토큰들을 추가한 이유는 **범용적인 토큰화-후처리 과정**에 대한 이해를 돕기 위함입니다!_"
    ]
   },
   {
@@ -862,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
