--- a/pruning-bert.ipynb
+++ b/pruning-bert.ipynb
@@ -16,7 +16,9 @@
     "\n",
     "우리는 이 중, 어텐션 매트릭스를 **Pruning** 해보는 시간을 본 튜토리얼을 통해 가져볼 것입니다.\n",
     "\n",
-    "_p.s. Model Compression 기법들은 BERT와 같은 큰 모델의 등장 이전에도 꾸준히 연구되어 오던 분야입니다._"
+    "_p.s. Model Compression 기법들은 BERT와 같은 큰 모델의 등장 이전에도 꾸준히 연구되어 오던 분야입니다._\n",
+    "\n",
+    "_p.s. 본 튜토리얼을 주제로 한 [**포스트**](https://huffon.github.io/2020/03/15/torch-pruning/)도 읽어보심을 추천드립니다._"
    ]
   },
   {
@@ -28,11 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.0'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn.utils.prune as prune\n",
@@ -1252,12 +1265,12 @@
      "data": {
       "text/plain": [
        "[('weight_mask', tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
-       "          [1., 0., 1.,  ..., 1., 1., 1.],\n",
-       "          [0., 1., 1.,  ..., 0., 1., 0.],\n",
+       "          [1., 0., 0.,  ..., 0., 1., 1.],\n",
+       "          [0., 0., 1.,  ..., 1., 1., 1.],\n",
        "          ...,\n",
-       "          [1., 0., 1.,  ..., 1., 1., 1.],\n",
-       "          [1., 1., 1.,  ..., 1., 1., 0.],\n",
-       "          [1., 1., 1.,  ..., 1., 1., 1.]]))]"
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 0.,  ..., 1., 0., 1.]]))]"
       ]
      },
      "execution_count": 12,
@@ -1291,12 +1304,12 @@
      "data": {
       "text/plain": [
        "tensor([[ 0.0267,  0.0427, -0.0713,  ..., -0.0344,  0.0055,  0.0277],\n",
-       "        [ 0.0228,  0.0000, -0.0429,  ...,  0.0860,  0.1789,  0.0289],\n",
-       "        [-0.0000, -0.0309, -0.0990,  ..., -0.0000,  0.0335, -0.0000],\n",
+       "        [ 0.0228,  0.0000, -0.0000,  ...,  0.0000,  0.1789,  0.0289],\n",
+       "        [-0.0000, -0.0000, -0.0990,  ..., -0.0316,  0.0335, -0.0635],\n",
        "        ...,\n",
-       "        [ 0.0040, -0.0000, -0.0924,  ..., -0.0338, -0.0250, -0.1278],\n",
-       "        [ 0.0134,  0.0512,  0.0694,  ..., -0.0096, -0.0297,  0.0000],\n",
-       "        [-0.0243, -0.0592, -0.0535,  ..., -0.0318, -0.0714,  0.0376]],\n",
+       "        [ 0.0040, -0.0065, -0.0924,  ..., -0.0338, -0.0250, -0.1278],\n",
+       "        [ 0.0134,  0.0512,  0.0694,  ..., -0.0096, -0.0297,  0.0294],\n",
+       "        [-0.0243, -0.0592, -0.0000,  ..., -0.0318, -0.0000,  0.0376]],\n",
        "       grad_fn=<MulBackward0>)"
       ]
      },
@@ -1348,7 +1361,7 @@
     {
      "data": {
       "text/plain": [
-       "OrderedDict([(0, <torch.nn.utils.prune.RandomUnstructured at 0x1ed7fb16a90>)])"
+       "OrderedDict([(0, <torch.nn.utils.prune.RandomUnstructured at 0x26e66135a58>)])"
       ]
      },
      "execution_count": 15,
@@ -1593,12 +1606,12 @@
      "data": {
       "text/plain": [
        "[('weight_mask', tensor([[1., 1., 1.,  ..., 1., 1., 1.],\n",
-       "          [1., 0., 1.,  ..., 1., 1., 1.],\n",
-       "          [0., 1., 1.,  ..., 0., 1., 0.],\n",
+       "          [1., 0., 0.,  ..., 0., 1., 1.],\n",
+       "          [0., 0., 1.,  ..., 1., 1., 1.],\n",
        "          ...,\n",
-       "          [1., 0., 1.,  ..., 1., 1., 1.],\n",
-       "          [1., 1., 1.,  ..., 1., 1., 0.],\n",
-       "          [1., 1., 1.,  ..., 1., 1., 1.]])),\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 1., 0.,  ..., 1., 0., 1.]])),\n",
        " ('bias_mask',\n",
        "  tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1.,\n",
        "          1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
@@ -1862,8 +1875,8 @@
     {
      "data": {
       "text/plain": [
-       "OrderedDict([(0, <torch.nn.utils.prune.RandomUnstructured at 0x1ed7fb16a90>),\n",
-       "             (1, <torch.nn.utils.prune.L1Unstructured at 0x1ed7fb2ccc0>)])"
+       "OrderedDict([(0, <torch.nn.utils.prune.RandomUnstructured at 0x26e66135a58>),\n",
+       "             (1, <torch.nn.utils.prune.L1Unstructured at 0x26e661049b0>)])"
       ]
      },
      "execution_count": 21,
@@ -1923,13 +1936,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[1., 0., 1.,  ..., 0., 0., 1.],\n",
-       "        [1., 0., 1.,  ..., 0., 0., 1.],\n",
-       "        [0., 0., 1.,  ..., 0., 0., 0.],\n",
+       "tensor([[1., 0., 1.,  ..., 1., 1., 1.],\n",
+       "        [1., 0., 0.,  ..., 0., 1., 1.],\n",
+       "        [0., 0., 1.,  ..., 1., 1., 1.],\n",
        "        ...,\n",
-       "        [1., 0., 1.,  ..., 0., 0., 1.],\n",
-       "        [1., 0., 1.,  ..., 0., 0., 0.],\n",
-       "        [1., 0., 1.,  ..., 0., 0., 1.]])"
+       "        [1., 0., 1.,  ..., 1., 1., 1.],\n",
+       "        [1., 0., 1.,  ..., 1., 1., 1.],\n",
+       "        [1., 0., 0.,  ..., 1., 0., 1.]])"
       ]
      },
      "execution_count": 23,
@@ -1949,13 +1962,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0267,  0.0000, -0.0713,  ..., -0.0000,  0.0000,  0.0277],\n",
-       "        [ 0.0228,  0.0000, -0.0429,  ...,  0.0000,  0.0000,  0.0289],\n",
-       "        [-0.0000, -0.0000, -0.0990,  ..., -0.0000,  0.0000, -0.0000],\n",
+       "tensor([[ 0.0267,  0.0000, -0.0713,  ..., -0.0344,  0.0055,  0.0277],\n",
+       "        [ 0.0228,  0.0000, -0.0000,  ...,  0.0000,  0.1789,  0.0289],\n",
+       "        [-0.0000, -0.0000, -0.0990,  ..., -0.0316,  0.0335, -0.0635],\n",
        "        ...,\n",
-       "        [ 0.0040, -0.0000, -0.0924,  ..., -0.0000, -0.0000, -0.1278],\n",
-       "        [ 0.0134,  0.0000,  0.0694,  ..., -0.0000, -0.0000,  0.0000],\n",
-       "        [-0.0243, -0.0000, -0.0535,  ..., -0.0000, -0.0000,  0.0376]],\n",
+       "        [ 0.0040, -0.0000, -0.0924,  ..., -0.0338, -0.0250, -0.1278],\n",
+       "        [ 0.0134,  0.0000,  0.0694,  ..., -0.0096, -0.0297,  0.0294],\n",
+       "        [-0.0243, -0.0000, -0.0000,  ..., -0.0318, -0.0000,  0.0376]],\n",
        "       grad_fn=<MulBackward0>)"
       ]
      },
@@ -1985,7 +1998,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.nn.utils.prune.PruningContainer at 0x1ed061f29e8>"
+       "<torch.nn.utils.prune.PruningContainer at 0x26e66104438>"
       ]
      },
      "execution_count": 25,
@@ -2009,8 +2022,8 @@
     {
      "data": {
       "text/plain": [
-       "[<torch.nn.utils.prune.RandomUnstructured at 0x1ed7fb16a90>,\n",
-       " <torch.nn.utils.prune.LnStructured at 0x1ed061f2b38>]"
+       "[<torch.nn.utils.prune.RandomUnstructured at 0x26e66135a58>,\n",
+       " <torch.nn.utils.prune.LnStructured at 0x26e661044e0>]"
       ]
      },
      "execution_count": 26,
@@ -2252,13 +2265,13 @@
     {
      "data": {
       "text/plain": [
-       "[('weight_mask', tensor([[1., 0., 1.,  ..., 0., 0., 1.],\n",
-       "          [1., 0., 1.,  ..., 0., 0., 1.],\n",
-       "          [0., 0., 1.,  ..., 0., 0., 0.],\n",
+       "[('weight_mask', tensor([[1., 0., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 0., 0.,  ..., 0., 1., 1.],\n",
+       "          [0., 0., 1.,  ..., 1., 1., 1.],\n",
        "          ...,\n",
-       "          [1., 0., 1.,  ..., 0., 0., 1.],\n",
-       "          [1., 0., 1.,  ..., 0., 0., 0.],\n",
-       "          [1., 0., 1.,  ..., 0., 0., 1.]])),\n",
+       "          [1., 0., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 0., 1.,  ..., 1., 1., 1.],\n",
+       "          [1., 0., 0.,  ..., 1., 0., 1.]])),\n",
        " ('bias_mask',\n",
        "  tensor([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 1., 1.,\n",
        "          1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
@@ -2322,13 +2335,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0267,  0.0000, -0.0713,  ..., -0.0000,  0.0000,  0.0277],\n",
-       "        [ 0.0228,  0.0000, -0.0429,  ...,  0.0000,  0.0000,  0.0289],\n",
-       "        [-0.0000, -0.0000, -0.0990,  ..., -0.0000,  0.0000, -0.0000],\n",
+       "tensor([[ 0.0267,  0.0000, -0.0713,  ..., -0.0344,  0.0055,  0.0277],\n",
+       "        [ 0.0228,  0.0000, -0.0000,  ...,  0.0000,  0.1789,  0.0289],\n",
+       "        [-0.0000, -0.0000, -0.0990,  ..., -0.0316,  0.0335, -0.0635],\n",
        "        ...,\n",
-       "        [ 0.0040, -0.0000, -0.0924,  ..., -0.0000, -0.0000, -0.1278],\n",
-       "        [ 0.0134,  0.0000,  0.0694,  ..., -0.0000, -0.0000,  0.0000],\n",
-       "        [-0.0243, -0.0000, -0.0535,  ..., -0.0000, -0.0000,  0.0376]],\n",
+       "        [ 0.0040, -0.0000, -0.0924,  ..., -0.0338, -0.0250, -0.1278],\n",
+       "        [ 0.0134,  0.0000,  0.0694,  ..., -0.0096, -0.0297,  0.0294],\n",
+       "        [-0.0243, -0.0000, -0.0000,  ..., -0.0318, -0.0000,  0.0376]],\n",
        "       grad_fn=<MulBackward0>)"
       ]
      },
@@ -2512,13 +2525,13 @@
        "           2.4265e-07,  1.1019e-07,  5.2357e-08, -5.1577e-08, -1.1036e-07,\n",
        "          -1.4878e-07, -2.7722e-08, -8.8569e-08], requires_grad=True)),\n",
        " ('weight', Parameter containing:\n",
-       "  tensor([[ 0.0267,  0.0000, -0.0713,  ..., -0.0000,  0.0000,  0.0277],\n",
-       "          [ 0.0228,  0.0000, -0.0429,  ...,  0.0000,  0.0000,  0.0289],\n",
-       "          [-0.0000, -0.0000, -0.0990,  ..., -0.0000,  0.0000, -0.0000],\n",
+       "  tensor([[ 0.0267,  0.0000, -0.0713,  ..., -0.0344,  0.0055,  0.0277],\n",
+       "          [ 0.0228,  0.0000, -0.0000,  ...,  0.0000,  0.1789,  0.0289],\n",
+       "          [-0.0000, -0.0000, -0.0990,  ..., -0.0316,  0.0335, -0.0635],\n",
        "          ...,\n",
-       "          [ 0.0040, -0.0000, -0.0924,  ..., -0.0000, -0.0000, -0.1278],\n",
-       "          [ 0.0134,  0.0000,  0.0694,  ..., -0.0000, -0.0000,  0.0000],\n",
-       "          [-0.0243, -0.0000, -0.0535,  ..., -0.0000, -0.0000,  0.0376]],\n",
+       "          [ 0.0040, -0.0000, -0.0924,  ..., -0.0338, -0.0250, -0.1278],\n",
+       "          [ 0.0134,  0.0000,  0.0694,  ..., -0.0096, -0.0297,  0.0294],\n",
+       "          [-0.0243, -0.0000, -0.0000,  ..., -0.0318, -0.0000,  0.0376]],\n",
        "         requires_grad=True))]"
       ]
      },
@@ -2603,7 +2616,7 @@
     {
      "data": {
       "text/plain": [
-       "OrderedDict([(1, <torch.nn.utils.prune.L1Unstructured at 0x1ed7fb2ccc0>)])"
+       "OrderedDict([(1, <torch.nn.utils.prune.L1Unstructured at 0x26e661049b0>)])"
       ]
      },
      "execution_count": 33,
@@ -2717,7 +2730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
